modify API getUsers